--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^3.0.1",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.6.2"
     }
 }
