--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.6.2"
+        "react-router-dom": "^6.6.2",
+        "sweetalert2": "^11.6.16"
     }
 }
